--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,21 +6,50 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
+ /* For signUp */
+ .form-container {
+   height: 100vh;
+   background-color: #63738A;
 
-* {
-  box-sizing: border-box;
-}
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+      color: rgb(130, 130, 130);
+ }
+ .heading_text{
+  font-size: 26px;
+  font-weight: 600;
+  text-align: center;
+  color: rgb(43, 43, 43);
+ }
+ .my-signup-form{
+    background-color: #F2F3F7;
+    padding: 42px;
+    border-radius: 8px;
+ }
+ .signUpError {
+   color: red;
+   display: inline;
+   margin: 8px 4px;
+ }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
-}
+ .form-Input-me{
+  font-size: 19px;
+  width: 350px;
+  height: 40px;
+  background-color: white;
+  border-radius: 5px;
+  margin-top: 12px;
+  padding-left: 5px;
+ }
+ .form-submit-me {
+    width: 360px;
+      height: 50px;
+      border-radius: 5px;
+      margin-top: 15px;
+      cursor: pointer;
+   background-color: #4DA54D;
+   color: white;
+ }
+ /* // End signup */
